--- a/templates/cadastro.html
+++ b/templates/cadastro.html
@@ -19,6 +19,13 @@
             align-items: center;
             height: 100vh;
             margin: 0;
+            padding: 0;
+        }
+        .container {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100%;
         }
 
         .card {
@@ -27,8 +34,8 @@
             padding: 30px;
             border-radius: 10px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-            width: 100%;
-            max-width: 600px; /* Ajustado para largura de 800px */
+            width: 40vw;
+            max-width: 900px;
         }
 
         .card-title {
@@ -70,6 +77,7 @@
         @media (max-width: 767.98px) {
             .card {
                 padding: 20px;
+                width: 50vw;
             }
         }
     </style>
@@ -77,7 +85,7 @@
 <body>
     <div class="container">
         <div class="row justify-content-center">
-            <div class="col-lg-10 col-md-12">
+            <div>
                 <div class="card">
                     <h2 class="card-title">Cadastro</h2>
                     {% if error_message %}
