--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark" id="navbar">
     <div class="container">
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
             data-bs-target="#collapsibleNavId" aria-controls="collapsibleNavId" aria-expanded="false"
@@ -12,13 +12,7 @@
                 </li>
                 <!-- O conteúdo dinâmico será inserido aqui -->
             </ul>
-            <form class="d-flex m-2 my-lg-0">
-                <input class="form-control me-sm-2" type="text" placeholder="Search" />
-                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">
-                    Search
-                </button>
-            </form>
-            <!-- Elementos dinâmicos serão adicionados aqui -->
+            
         </div>
     </div>
 </nav>
@@ -80,4 +74,6 @@
     }
 
     getNavBar();
+
+   
 </script>
