--- a/templates/postagem.html
+++ b/templates/postagem.html
@@ -5,6 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <style>
+               
+        .btn-close-custom {
+            filter: invert(1);
+          }
+
+        .modal-content {
+            background-color: #212529;
+            color: white;
+        }
+
+        .modal-header {
+            border-bottom: 1px solid #444;
+        }
+
+        .modal-body {
+            border-top: 1px solid #444;
+        }
+
         button:hover {
             background-color: #161513;
             color: white;
@@ -135,7 +153,8 @@
               </div>
               
                 <div class="col justify-content-center" style=" background-color: #161513; color:white;  text-align: justify; flex-grow: 2; font-size: large; color:black; border-top-right-radius: 10px; " >
-    
+                   
+                    
                 {% if request.user.id %}
                 {% if assisti %}
                 <form action="/filmeDesassistido/{{filme.id}}" style="display: flex; justify-content: right;">
@@ -184,12 +203,34 @@
                     <div class="comment-content flex-grow-1">
                         <h5>{{a.skin.usuario}}</h5>
                         <p>{{a.comentario}}</p>
-                        <div class="rating">Nota: {{a.nota}}</div>
-                    
-                        <div class="actions mt-2">
-                            <button class="btn btn-sm btn-outline-success me-1" onclick="likePost('{{ a.id }}')">👍 <span>{{a.like_count}}</span></button>
-                            <button class="btn btn-sm btn-outline-danger" onclick="dislikePost('{{ a.id }}')">👎 <span>{{a.dislike_count}}</span></button>
+                        <div class="rating">Nota: 
+                            
+                            {%for i in range%}
+                            
+                                {% if i <= a.nota %}
+                                    ★
+                                {% else %}
+                                    ☆
+                                {% endif %}
+                            {%endfor%}
+                            
+                            
                         </div>
+                        {% if request.user.id %}
+                        <div class="actions mt-2">
+                            <button class="btn btn-sm btn-outline-success me-1"  onclick="likePost('{{ a.id }}')">👍 <span id="like-count-{{a.id}}"> {{a.like_count}}</span></button>
+                            <button class="btn btn-sm btn-outline-danger"  onclick="dislikePost('{{ a.id }}')">👎 <span id="dislike-count-{{a.id}}">{{a.dislike_count}}</span></button>
+                            {% if a.skin.usuario == request.user %}
+                            
+                            <button data-bs-toggle="modal" class="btn btn-outline-warning" onclick="editaAvaliacao('{{a.id}}','{{ a.comentario }}' , '{{a.nota}}' )" data-bs-target="#editAvaliaçãoModal"> Editar</button>
+                            
+                            <button type="button" class="btn btn-outline-danger" onclick="removeAvaliacao('{{ a.id }}')" data-bs-toggle="modal" data-bs-target="#deleteAvaliacaoModal">
+                                Remover
+                            </button>
+                            
+                            {%endif%}    
+                        </div>
+                        {%endif%}
                     </div>
                 </div>
                
@@ -203,11 +244,57 @@
                     <input name="nota" type="number" id="new-rating" class="form-control mb-3" min="1" max="5" placeholder="Nota (1-5)">
                     <button type="submit" class="btn btn-success" onclick="addComment()">Enviar Avaliação</button>
                 </form>
+
+
+                
+
+
+    <div class="modal fade" id="deleteAvaliacaoModal" tabindex="-1" aria-labelledby="deleteAvaliacaoModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="deleteAvaliacaoModalLabel">Confirmar Remoção</h5>
+                    <button type="button" class="btn-close btn-close-custom" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <p>Você tem certeza que deseja remover esta avaliação?</p>
+                </div>
+                <form id="deleteAvaliacaoForm" class="modal-footer" action=''>
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
+                    <button type="submit" class="btn btn-danger">Remover</button>
+                </form>
+            </div>
+        </div>
+    </div>
+
+    <div class="modal fade" id="editAvaliaçãoModal" tabindex="-1" aria-labelledby="editAvaliaçãoModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="editAvaliaçãoModalLabel">Editar Avaliação</h5>
+                    <button type="button" class="btn-close btn-close-custom" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <form class="comment-form" action="" id="edit-form" method="post">
+                        {%csrf_token%}
+                        <textarea name="comentario" id="edit-comment" class="form-control mb-3" placeholder="Adicione um comentário..." rows="4"></textarea>
+                        <input name="nota" type="number" id="edit-rating" class="form-control mb-3" min="1" max="5" placeholder="Nota (1-5)">
+                        <button type="submit" class="btn btn-success" onclick="addComment()">Editar Avaliação</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+
       </main>
+
+
+      
 
    {% include 'bootstrapJS.html' %}
    
    <script>
+    
     let like = document.getElementById('like')
     let deslike = document.getElementById('deslike')
     function getCookie(name) {
@@ -261,10 +348,44 @@ function updateCounts(avaId, data) {
     .then(data => {
         document.getElementById(`like-count-${avaId}`).innerText = data.likes;
         document.getElementById(`dislike-count-${avaId}`).innerText = data.dislikes;
-    });
+    }).catch(error => console.error(error));
+
+    
+    
 }
 
 
+function removeAvaliacao(id) {
+        const form = document.getElementById('deleteAvaliacaoForm');
+        form.action = `/removerPostagem/${id}`;
+    }
+
+function editaAvaliacao(id,comentario,nota){
+    action="/editarPostagem/"
+    f = document.querySelector("#edit-form")
+    c = document.querySelector('#edit-comment')
+    n = document.querySelector('#edit-rating')
+
+    f.action = `/editarPostagem/${id}`
+
+    console.log(c)
+    console.log(n)
+    console.log('id: ',id)
+    console.log('comentario: ',comentario)
+    console.log('nota',nota)
+    c.value = comentario
+    n.value = nota
+}
+
     </script>
+
+
+
+
+
+    
+   
+
+
 </body>
 </html>
